Fix sidebar switcher collapsing

--- a/theme/parts/sidebar.css
+++ b/theme/parts/sidebar.css
@@ -33,3 +33,6 @@
 	padding: 6px !important;
 }
 
+#sidebar-switcher-target {
+  flex: unset !important;
+}
